# rust-api-template

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README copy.md  README.md  docker-compose.yml  package-lock.json  package.json  serverless.yml
.github/workflows/: _deploy.yml
src/: constants.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs
src/models/: resource.rs  response.rs
src/routes/: home.rs  resource.rs
tests/: integration.rs  unit.rs
tests/integration/routes/: resource_test.rs
tests/unit/models/: resource_test.rs
