[package]
name = "rust-api-template"
version = "0.1.0"
edition = "2021"
authors = ["JaneTech"]

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda-web = { version = "0.2.1", features=["actix4"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0.152", features = ["derive"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

actix-rt = "2.8.0"
actix-web = "4.3.0" 
actix-service = "2.0.2"
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
pre-commit = "0.5.2"
automod = "1.0.6"

[dev-dependencies]
actix-rt = "2.8.0"

[package.metadata.precommit]
fmt = "cargo fmt"
clippy = "cargo clippy --fix"